--- a/projects/chat_standort_6_verarsche/style.css
+++ b/projects/chat_standort_6_verarsche/style.css
@@ -24,7 +24,7 @@ main{
 .chat-history{
     width: 100%;
     height: 100px;
-    background-color: lightpink;
+    background-color: white;
     flex-grow: 1;
     display: flex;
     align-items: flex-end;
@@ -44,7 +44,7 @@ main{
 
 .chat-history > .message.user {
     align-self: flex-end;
-    background-color: #dcf8c6;
+    background-color: lightgray;
     padding: 8px 12px;
     border-radius: 12px 12px 0 12px;
     max-width: 80%;
