--- a/projects/chat_standort_7.3/style.css
+++ b/projects/chat_standort_7.3/style.css
@@ -12,7 +12,8 @@ body{
 }
 
 main{
-    width: 700px;
+    width: 100%;
+    max-width: 700px;
     height: 100%;
     margin: 0 auto;
     display: flex;
@@ -42,9 +43,9 @@ main{
     max-width: 80%;
 }
 
-chat-history > .message.user {
+.chat-history > .message.user {
     align-self: flex-end;
-    background-color: lightgray;
+    background-color: #e4e4e4;
     padding: 8px 12px;
     border-radius: 12px 12px 0 12px;
     max-width: 80%;
@@ -126,3 +127,6 @@ button {
     color: white;
 }
 
+/* Add responsive styling for mobile */
+@media (max-width: 768px) {
+    input[type='text']{
